gccida/c3/biv_total_increment
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/biv_total_increment/src/unroll.c:2924:1: error: use of undeclared identifier 'induction_1'
induction_1 *biv; // rbx 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/biv_total_increment/src/unroll.c:2924:14: error: use of undeclared identifier 'biv'; did you mean 'div'?
induction_1 *biv; // rbx 
             ^~~
             div
/usr/include/stdlib.h:849:14: note: 'div' declared here
extern div_t div (int __numer, int __denom)
             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/biv_total_increment/src/unroll.c:2930:1: error: use of undeclared identifier 'biv'
biv = bl_0->biv; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/biv_total_increment/src/unroll.c:2931:6: error: use of undeclared identifier 'biv'; did you mean 'div'?
if ( biv ) 
     ^~~
     div
/usr/include/stdlib.h:849:14: note: 'div' declared here
extern div_t div (int __numer, int __denom)
             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/biv_total_increment/src/unroll.c:2935:19: error: use of undeclared identifier 'biv'
v3 = *( ( _WORD *)biv + 50); 
                  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/biv_total_increment/src/unroll.c:2938:12: error: use of undeclared identifier 'biv'
mult_val = biv->mult_val; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/biv_total_increment/src/unroll.c:2942:47: error: use of undeclared identifier 'biv'
result = fold_rtx_mult_add( result, mult_val, biv->add_val, biv->mode); 
                                              ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/biv_total_increment/src/unroll.c:2942:61: error: use of undeclared identifier 'biv'
result = fold_rtx_mult_add( result, mult_val, biv->add_val, biv->mode); 
                                                            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/biv_total_increment/src/unroll.c:2943:1: error: use of undeclared identifier 'biv'
biv = biv->next_iv; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/biv_total_increment/src/unroll.c:2943:7: error: use of undeclared identifier 'biv'
biv = biv->next_iv; 
      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/biv_total_increment/src/unroll.c:2945:6: error: use of undeclared identifier 'biv'; did you mean 'div'?
if ( biv ) 
     ^~~
     div
/usr/include/stdlib.h:849:14: note: 'div' declared here
extern div_t div (int __numer, int __denom)
             ^
11 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/biv_total_increment/src/obj/unroll.o] Error 1
